--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -175,10 +175,17 @@ jobs:
 
             # Get signing identity
             APP_IDENTITY=$(security find-identity -v -p codesigning $RUNNER_TEMP/app-signing.keychain-db | grep "Apple Distribution" | head -1 | cut -d'"' -f2)
-            INSTALLER_IDENTITY=$(security find-identity -v -p codesigning $RUNNER_TEMP/app-signing.keychain-db | grep "Mac Installer Distribution" | head -1 | cut -d'"' -f2)
+            INSTALLER_IDENTITY=$(security find-identity -v -p codesigning $RUNNER_TEMP/app-signing.keychain-db | grep "Installer" | head -1 | cut -d'"' -f2)
 
             echo "Using app identity: $APP_IDENTITY"
             echo "Using installer identity: $INSTALLER_IDENTITY"
+
+            if [ -z "$INSTALLER_IDENTITY" ]; then
+              echo "Available identities:"
+              security find-identity -v -p codesigning $RUNNER_TEMP/app-signing.keychain-db
+              echo "Error: Could not find installer identity"
+              exit 1
+            fi
 
             # Sign helper apps first
             codesign --force --sign "$APP_IDENTITY" \
